# gpgpu-icp

./: .gitignore  CMakeLists.txt  Makefile  RAW.py  README  README.md  gpgpu-icp  ssh.sh
cpu_src/: CMakeLists.txt  alignment.cc  icp.cc  main.cc
data/data_students/: perso.txt  perso2.txt  perso_tr1.txt
gpu_src/: CMakeLists.txt  alignment.cc  alignment.cu  corress.cu  icp.cu  icp.hh  log.cc  main.cc  main.cu  matrix.cc  matrix.hh  points.cu  points.hh
src/: aligment.cc  aligment.hh  alignment.cc  computation.hh  correspondence.cc  icp.cc  icp.hh  log.cc  log.hh  main.cc  matrix.cc  matrix.hh  points.cc  points.hh  quaternion.cc
